[package]
name = "wasm_keyboard_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["full"] }
proc-macro2 = { version = "1.0.51" }
# Since wasm_keyboard_macros is meant to be used with wasm_keyboard,
# we can assume that the necessary features of uievents-code are enabled.
uievents-code =  { version = "0.1.2", features = ["enum"] }
strum = "0.24"
quote = "1.0.23"

[features]
keypress = []
