[package]
name = "wasm_keyboard_macros"
version = "0.1.0"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv/issues/244
description = "Macros for `wasm_keyboard`."
documentation = "https://docs.rs/wasm_keyboard_macros"
readme = "README.md"
repository = "https://github.com/JohnScience/wasm_keyboard_macros"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["wasm", "frontend", "keyboard", "events"]
categories = ["wasm", "web-programming"] # https://crates.io/category_slugs
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
autobins = false
# autoexamples = true
autotests = false
autobenches = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["full"] }
proc-macro2 = { version = "1.0.51" }
# Since wasm_keyboard_macros is meant to be used with wasm_keyboard,
# we can assume that the necessary features of uievents-code are enabled.
uievents-code =  { version = "0.1.2", features = ["enum"] }
strum = "0.24"
quote = "1.0.23"

[features]
keypress = []
